[project]
name = "nvidia-smi-web-agent"
version = "0.1.3"
description = "The agent run on the GPU machine to collect the GPU metrics."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.95.0",
    "nvitop>=1.5.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["C901", "E501", "E721", "E741", "F402", "F823"]
select = ["C", "E", "F", "I", "PTH", "W"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]
